--- a/episode-30/ts-consumer/package.json
+++ b/episode-30/ts-consumer/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "mylib": "1.0.0"
   }
 }
