Write TypeScript "consumer"

--- a/episode-30/mylib/package.json
+++ b/episode-30/mylib/package.json
@@ -5,7 +5,8 @@
   "types": "index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "devDependencies": {
     "typescript": "^5.0.4"
